<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">El Camino Del Inca</string>
    <string name="title_section1">Libre</string>
    <string name="title_section2">Espada</string>
    <string name="title_section3">Lanza</string>
    <string name="title_section4">Arco</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="send">Send message</string>
    <string name="action_sensitivity">Sensibilidad</string>
    <string name="action_exit">Cerrar Sesión</string>

    <string name="login_email">Correo electronico</string>
    <string name="login_password">Contraseña</string>
    <string name="login_confirm_password">Confirmar Contraseña</string>
    <string name="login_enter">Ingresar</string>
    <string name="login_register_pre">¿Aún no tienes una cuenta?</string>
    <string name="login_register"><![CDATA[<u>Regístrate</u>]]></string>
    <string name="game_code_pre">Ingresa el código de juego:</string>
    <string name="game_pause">Activa para jugar\n(Mueve el switch)</string>
    <string name="game_code_button">Listo</string>
    <string name="register_text">Regístrate y se parte de una nueva experiencia en juegos:</string>

</resources>
