<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Game">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/game_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#D9D9D9"
        android:padding="@dimen/padding">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:id="@+id/game_match">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/game_code_pre"
                android:gravity="center"
                android:textSize="@dimen/font_size_code_text"/>
            <EditText
                android:id="@+id/game_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="@dimen/font_size_code"
                android:layout_margin="50dip"
                android:inputType="number"
                android:textCursorDrawable="@null"
                android:background="@drawable/inca_textfield_activated_holo_dark"/>
            <Button
                android:id="@+id/game_code_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/game_code_button"
                android:padding="@dimen/font_size_text"
                android:background="@drawable/inca_btn_default_focused_holo_dark"/>
            <TextView
                android:layout_width="300dip"
                android:layout_height="wrap_content"
                android:text="Para obtener un código de juego, ingresa desde tu computadora a www.ingesoli.com:8080 y selecciona jugar ahora."
                android:gravity="center"
                android:layout_marginTop="40dip"/>
        </LinearLayout>

        <TextView
            android:id="@+id/game_message"
            android:layout_width="match_parent"
            android:layout_height="300dip"
            android:gravity="center"
            android:textSize="@dimen/font_size_code_text"
            android:layout_marginTop="50dip"
            android:layout_marginBottom="50dip"
            android:text="@string/game_pause"
            android:visibility="gone"/>

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"
            android:id="@+id/game_controls">
            <TableRow
                android:gravity="center">
                <ImageButton
                    android:id="@+id/game_move_forward_left"
                    android:layout_width="100dip"
                    android:layout_height="100dip"
                    android:src="@drawable/forwardleft"
                    android:background="@drawable/inca_btn_default_focused_holo_dark"/>
                <ImageButton
                    android:id="@+id/game_move_forward"
                    android:layout_width="100dip"
                    android:layout_height="100dip"
                    android:src="@drawable/forward"
                    android:background="@drawable/inca_btn_default_focused_holo_dark"/>
                <ImageButton
                    android:id="@+id/game_move_forward_right"
                    android:layout_width="100dip"
                    android:layout_height="100dip"
                    android:src="@drawable/forwardright"
                    android:background="@drawable/inca_btn_default_focused_holo_dark"/>
            </TableRow>
            <TableRow
                android:gravity="center">
                <ImageButton
                    android:id="@+id/game_move_left"
                    android:layout_width="100dip"
                    android:layout_height="100dip"
                    android:src="@drawable/left"
                    android:background="@drawable/inca_btn_default_focused_holo_dark"/>
                <ImageButton
                    android:id="@+id/game_move_camera"
                    android:layout_width="100dip"
                    android:layout_height="100dip"
                    android:src="@drawable/camera"
                    android:background="@drawable/inca_btn_default_focused_holo_dark"/>
                <ImageButton
                    android:id="@+id/game_move_right"
                    android:layout_width="100dip"
                    android:layout_height="100dip"
                    android:src="@drawable/right"
                    android:background="@drawable/inca_btn_default_focused_holo_dark"/>
            </TableRow>
            <TableRow
                android:gravity="center">
                <ImageButton
                    android:id="@+id/game_move_backward_left"
                    android:layout_width="100dip"
                    android:layout_height="100dip"
                    android:src="@drawable/backwardleft"
                    android:background="@drawable/inca_btn_default_focused_holo_dark"/>
                <ImageButton
                    android:id="@+id/game_move_backward"
                    android:layout_width="100dip"
                    android:layout_height="100dip"
                    android:src="@drawable/backward"
                    android:background="@drawable/inca_btn_default_focused_holo_dark"/>
                <ImageButton
                    android:id="@+id/game_move_backward_right"
                    android:layout_width="100dip"
                    android:layout_height="100dip"
                    android:src="@drawable/backwardright"
                    android:background="@drawable/inca_btn_default_focused_holo_dark"/>
            </TableRow>
        </TableLayout>
        <Button
            android:id="@+id/game_attack"
            android:layout_width="300dip"
            android:layout_height="100dip"
            android:visibility="gone"
            android:text="ATACAR"
            android:textSize="@dimen/font_size_button"
            android:background="@drawable/inca_btn_default_focused_holo_dark"/>

        <Switch
            android:id="@+id/game_switch"
            android:layout_width="wrap_content"
            android:layout_height="100dip"
            android:thumbTextPadding="25dp"
            android:layout_gravity="center"
            android:layout_marginTop="-20dip"/>

    </LinearLayout>

    <fragment android:id="@+id/navigation_drawer"
        android:layout_width="@dimen/navigation_drawer_width" android:layout_height="match_parent"
        android:layout_gravity="start"
        android:name="ami.com.elcaminodelinca.NavigationDrawerFragment"
        tools:layout="@layout/fragment_navigation_drawer" />

</android.support.v4.widget.DrawerLayout>